allow only admin to be deleted by another admin

--- a/Areas/Admin/Pages/User/Delete.cshtml
+++ b/Areas/Admin/Pages/User/Delete.cshtml
@@ -11,6 +11,7 @@
 <div>
     <h4>User</h4>
     <hr />
+    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.SelectedUser.UserName)
