--- a/Areas/Admin/Pages/Project/Delete.cshtml
+++ b/Areas/Admin/Pages/Project/Delete.cshtml
@@ -30,6 +30,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Project.UpdatedAt)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Project.User)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Project.User.Id)
+        </dd>
     </dl>
     
     <form method="post">
