--- a/Areas/Admin/Pages/Project/Edit.cshtml
+++ b/Areas/Admin/Pages/Project/Edit.cshtml
@@ -20,6 +20,11 @@
                 <span asp-validation-for="Project.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Project.UserId" class="control-label"></label>
+                <select asp-for="Project.UserId" class="form-control" asp-items="ViewBag.UserId"></select>
+                <span asp-validation-for="Project.UserId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
