--- a/Areas/Admin/Pages/Project/Index.cshtml
+++ b/Areas/Admin/Pages/Project/Index.cshtml
@@ -22,6 +22,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Project[0].UpdatedAt)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Project[0].User)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -36,6 +39,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.UpdatedAt)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.User.Id)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
