--- a/Areas/Admin/Pages/Project/Create.cshtml
+++ b/Areas/Admin/Pages/Project/Create.cshtml
@@ -5,9 +5,18 @@
     ViewData["Title"] = "Create";
 }
 
+@section Styles {
+    <link rel="stylesheet" href="~/css/tagify.min.css">
+}
+
 <h1>Create</h1>
 
 <h4>Project</h4>
+
+<div>
+    <a asp-page="Index">Back to List</a>
+</div>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,6 +27,12 @@
                 <input asp-for="Project.Name" class="form-control" />
                 <span asp-validation-for="Project.Name" class="text-danger"></span>
             </div>
+            <div class="my-2"></div>
+            <div class="form-group">
+                <label for="swimlanes" class="control-label">Swimlanes</label>
+                <input id="swimlanes" class="form-control" name="swimlanes">
+            </div>
+            <div class="my-2"></div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -25,7 +40,19 @@
     </div>
 </div>
 
-<div>
-    <a asp-page="Index">Back to List</a>
-</div>
+@section Scripts {
+    <script src="~/lib/tagify/tagify.min.js"></script>
+    <script src="~/lib/tagify/tagify.polyfill.min.js"></script>
+    <script>
+        var inputEl = document.querySelector("input[name=swimlanes]");
+        var tagify = new Tagify (inputEl);
+        
+        tagify.addTags(["banana", "orange", "apple"]);
 
+        inputEl.addEventListener('change', onChange)
+
+        function onChange(e) {
+            console.log(e.target.value)
+        }
+    </script>
+}
