--- a/Areas/Admin/Pages/Project/Edit.cshtml
+++ b/Areas/Admin/Pages/Project/Edit.cshtml
@@ -19,12 +19,10 @@
                 <input asp-for="Project.Name" class="form-control" />
                 <span asp-validation-for="Project.Name" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Project.UserId" class="control-label"></label>
-                <select asp-for="Project.UserId" class="form-control" asp-items="ViewBag.UserId"></select>
-                <span asp-validation-for="Project.UserId" class="text-danger"></span>
+            <div class="mt-3">
+                <a asp-area="Admin" asp-page="/Swimlane/Index" asp-route-ProjectId="@Model.Project.Id">Edit Swimlanes</a>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
