--- a/Areas/Admin/Pages/User/Create.cshtml
+++ b/Areas/Admin/Pages/User/Create.cshtml
@@ -12,21 +12,25 @@
         <section>
             <form id="account" method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div>
+                <div class="form-group">
                     <label asp-for="Input.Username" class="form-label"></label>
                     <input asp-for="Input.Username" class="form-control" autocomplete="username" />
                     <span asp-validation-for="Input.Username" class="text-danger"></span>
                 </div>
-                <div>
+                <div class="form-group">
                     <label asp-for="Input.Email" class="form-label"></label>
                     <input asp-for="Input.Email" class="form-control" autocomplete="email" />
                     <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </div>
-                <div class="mb-3">
+                <div class="form-group">
                     <label asp-for="Input.PhoneNumber" class="form-label"></label>
                     <input asp-for="Input.PhoneNumber" class="form-control" autocomplete="tel" />
                     <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
                     <span></span>
+                </div>
+                <div class="form-group mb-3">
+                    <label asp-for="Input.Role" class="control-label"></label>
+                    @Html.DropDownList("Input.Role", (SelectList)ViewBag.Roles, "Please choose", new { @class = "form-control" })
                 </div>
                 <div>
                     <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Submit</button>
