--- a/Areas/Admin/Pages/Project/Delete.cshtml
+++ b/Areas/Admin/Pages/Project/Delete.cshtml
@@ -31,10 +31,10 @@
             @Html.DisplayFor(model => model.Project.UpdatedAt)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Project.User)
+            @Html.DisplayNameFor(model => model.Project.Creator)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Project.User.Id)
+            @Html.DisplayFor(model => model.Project.Creator.Id)
         </dd>
     </dl>
     
