--- a/Areas/Admin/Pages/Project/Index.cshtml
+++ b/Areas/Admin/Pages/Project/Index.cshtml
@@ -23,7 +23,7 @@
                 @Html.DisplayNameFor(model => model.Project[0].UpdatedAt)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Project[0].User)
+                @Html.DisplayNameFor(model => model.Project[0].Creator)
             </th>
             <th></th>
         </tr>
@@ -41,7 +41,7 @@
                 @Html.DisplayFor(modelItem => item.UpdatedAt)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.User.Id)
+                @Html.DisplayFor(modelItem => item.Creator.Id)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
