--- a/Areas/Admin/Pages/Project/Edit.cshtml
+++ b/Areas/Admin/Pages/Project/Edit.cshtml
@@ -19,9 +19,9 @@
                 <input asp-for="Project.Name" class="form-control" />
                 <span asp-validation-for="Project.Name" class="text-danger"></span>
             </div>
-            <div class="mt-3">
+            @* <div class="mt-3">
                 <a asp-area="Admin" asp-page="/Swimlane/Index" asp-route-ProjectId="@Model.Project.Id">Edit Swimlanes</a>
-            </div>
+            </div> *@
             <div class="form-group mt-3">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
