--- a/Areas/Admin/Pages/Project/Index.cshtml
+++ b/Areas/Admin/Pages/Project/Index.cshtml
@@ -5,50 +5,56 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+@if (Model.Project != null)
+{
+    <p>Details for @Model.Project.Id</p>
+} else {
+    <h1>Index</h1>
 
-<p>
-    <a asp-page="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Project[0].Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Project[0].CreatedAt)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Project[0].UpdatedAt)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Project[0].Creator)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Project) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedAt)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.UpdatedAt)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Creator.Id)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+    <p>
+        <a asp-page="Create">Create New</a>
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Projects[0].Name)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Projects[0].CreatedAt)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Projects[0].UpdatedAt)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Projects[0].Creator)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+    @foreach (var item in Model.Projects) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.CreatedAt)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UpdatedAt)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Creator.Id)
+                </td>
+                <td>
+                    <a asp-route-id="@item.Id">View</a> |
+                    <a asp-page="./Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+    }
+        </tbody>
+    </table>
 }
-    </tbody>
-</table>
