--- a/Views/Shared/Components/ProjectSwimlanes/Default.cshtml
+++ b/Views/Shared/Components/ProjectSwimlanes/Default.cshtml
@@ -1,3 +1,4 @@
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @model List<IssueTracker.Data.Swimlane>
 
 <table class="table">
@@ -22,9 +23,14 @@
                         @Html.DisplayFor(modelItem => item.Id)
                     </td>
                     <td>
-                        <a asp-page="./Delete" asp-route-id="@item.Id">Delete</a>
+                        <a asp-page="/Admin/Project/Delete" asp-route-id="@item.Id">Delete</a>
                     </td>
                 </tr>
         }
     </tbody>
 </table>
+
+<div>
+    @* <button type="button" class="btn btn-link p-0 align-baseline" data-bs-toggle="modal" data-bs-target="#addMemberModal">Add Member</button> | *@
+    <a asp-area="Admin" asp-page="/Project/Index">Back to List</a>
+</div>
