--- a/Views/Shared/Components/ProjectMembers/Default.cshtml
+++ b/Views/Shared/Components/ProjectMembers/Default.cshtml
@@ -35,7 +35,9 @@
                         @Html.DisplayFor(modelItem => item.Id)
                     </td>
                     <td>
-                        <a asp-page="/Admin/Project/Delete" asp-route-id="@item.Id">Delete</a>
+                        <a asp-area="Admin" asp-page="/User/Edit" asp-route-id="@item.Id">Edit</a> |
+                        <a asp-area="Admin" asp-page="/User/Details" asp-route-id="@item.Id">Details</a> |
+                        <a asp-area="Admin" asp-page="/User/Delete" asp-route-id="@item.Id">Remove</a>
                     </td>
                 </tr>
         }
@@ -44,5 +46,4 @@
 
 <div>
     <button type="button" class="btn btn-link p-0 align-baseline" data-bs-toggle="modal" data-bs-target="#addMemberModal">Add Member</button> |
-    <a asp-area="Admin" asp-page="/Project/Index">Back to List</a>
 </div>
