add member to project

--- a/Areas/Admin/Pages/Project/Details.cshtml
+++ b/Areas/Admin/Pages/Project/Details.cshtml
@@ -31,27 +31,10 @@
         <div class="tab-pane fade" id="members-tab-pane" role="tabpanel" aria-labelledby="members-tab" tabindex="0"></div>
         @* Swimlanes tab. Will be filled using js *@
         <div class="tab-pane fade" id="swimlanes-tab-pane" role="tabpanel" aria-labelledby="swimlanes-tab" tabindex="0"></div>
-        @* Add member modal *@
-        <div class="modal modal-dialog modal-dialog-centered fade" id="addMemberModal" tabindex="-1" aria-labelledby="addMemberModalLabel" aria-hidden="true">
+        @* Add member modal. Content will be loaded via AJAX *@
+        <div class="modal modal-dialog modal-dialog-centered fade" style="display: none;" id="addMemberModal" tabindex="-1" aria-labelledby="addMemberModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                <form method="post" asp-page-handler="AddMember" asp-route-id="@Model.Project.Id">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5" id="addMemberModalLabel">Add member</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label asp-for="Input.UserId" class="control-label"></label>
-                            <select asp-for="Input.UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
-                        </div>
-                        <input type="hidden" name="id" value="@Model.Project.Id">
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                        <button class="btn btn-primary">Save changes</button>
-                    </div>
-                </form>
                 </div>
             </div>
         </div>
@@ -64,6 +47,7 @@
         const tabs = document.querySelectorAll('button[data-bs-toggle="tab"]');
         const spinner = `<div class="d-flex justify-content-center align-items-center" style="height: 50vh;"><div class="spinner-border text-primary" role="status"><span class="visually-hidden">Loading...</span></div></div>`;
 
+        // Listen for tab click events
         tabs.forEach(tab => {
             tab.addEventListener('shown.bs.tab', event => {
                 const targetId = event.target.dataset.bsTarget;
@@ -72,7 +56,9 @@
             })
         })
 
+        // Fetch content for current tab and display it
         async function updateView(targetId, endpoint) {
+            console.log(targetId, endpoint);
             const target = $(targetId);
             target.html(spinner);
             const url = new URL(window.location.href);
@@ -88,6 +74,7 @@
             }
         }
 
+        // Attach event listeners for newly fetched content
         async function attachEventListeners(endpoint) {
             const url = new URL(window.location.href);
             const queryParams = new URLSearchParams(url.search);
@@ -101,5 +88,36 @@
                 await fetch(`/api/project/${newEndpoint}?projectId=${queryParams.get("id")}&swimlaneId=${event.target.dataset.swimlaneId}`, { method: "DELETE" });
             });
         }
+
+        // Fetch add member form
+        const addMemberModal = document.getElementById("addMemberModal");
+        addMemberModal.addEventListener("shown.bs.modal", async e => {
+            // Show spinner
+            $("#addMemberModal .modal-content").html(`<div class="modal-body">${spinner.replace("50vh", "10vh")}</div>`);
+            // Load form using AJAX and attach its event listeners
+            $("#addMemberModal .modal-content").load("/api/project/GetAddMemberForm", (event) => {
+                $("#add-member-form").submit(async evt => {
+                    evt.preventDefault();
+                    // Grab project Id from URL
+                    const url = new URL(window.location.href);
+                    const queryParams = new URLSearchParams(url.search);
+                    // Get form values
+                    const payload = new URLSearchParams();
+                    payload.append("ProjectId", queryParams.get("id"));
+                    $.each($(evt.target).serializeArray(), function(_, field) {
+                        payload.append(field.name, field.value);
+                    });
+                    // Post data
+                    await fetch(`/api/project/AddMember?projectId${queryParams.get("id")}`, { 
+                        method: "POST", 
+                        headers: { "Content-Type": "application/x-www-form-urlencoded" },
+                        body: payload
+                    });
+                    // Refresh UI
+                    updateView("#members-tab-pane", "members");
+                })
+            });
+        });
+
     </script>
 }
