--- a/Views/Shared/Components/ProjectMembers/Default.cshtml
+++ b/Views/Shared/Components/ProjectMembers/Default.cshtml
@@ -45,5 +45,5 @@
 </table>
 
 <div>
-    <button type="button" class="btn btn-link p-0 align-baseline" data-bs-toggle="modal" data-bs-target="#addMemberModal">Add Member</button> |
+    <button type="button" class="btn btn-link p-0 align-baseline" data-bs-toggle="modal" data-bs-target="#addMemberModal">Add Member</button>
 </div>
