--- a/Views/Shared/Components/ProjectSwimlanes/Default.cshtml
+++ b/Views/Shared/Components/ProjectSwimlanes/Default.cshtml
@@ -34,5 +34,5 @@
 </table>
 
 <div>
-    @* <button type="button" class="btn btn-link p-0 align-baseline" data-bs-toggle="modal" data-bs-target="#addMemberModal">Add Swimlane</button> | *@
+    <button type="button" class="btn btn-link p-0 align-baseline" data-bs-toggle="modal" data-bs-target="#addSwimlanesModal">Add Swimlane</button>
 </div>
