--- a/Views/Shared/Components/ProjectMembers/Default.cshtml
+++ b/Views/Shared/Components/ProjectMembers/Default.cshtml
@@ -37,7 +37,7 @@
                     <td>
                         <a asp-area="Admin" asp-page="/User/Edit" asp-route-id="@item.Id">Edit</a> |
                         <a asp-area="Admin" asp-page="/User/Details" asp-route-id="@item.Id">Details</a> |
-                        <a asp-area="Admin" asp-page="/User/Delete" asp-route-id="@item.Id">Remove</a>
+                        <span class="delete link-primary text-decoration-underline" style="cursor: pointer;" data-member-id="@item.Id">Remove</span>
                     </td>
                 </tr>
         }
